create ui for rps

--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html> 
-<head> 
-    
-    <script src="script.js"></script>
+<head>   
+    <link rel="stylesheet" href="style.css">
 </head>
+<body>
+    <h3 id= "player_score">player:0</h3> 
+    <h3 id= "computer_score">computer:0</h3>
+    <h1> lets play</h1>
+    <div>    
+        <button class="btn">Rock</button>
+        <button class="btn">Scissors</button>
+        <button class="btn">Paper</button>
+    </div>
+    
+</body>
+<script src="script.js"></script>
